<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pensive</string>
    <string name="action_settings" >Settings
    </string>
    <string name="drawer_open" >Open navigation drawer</string>
    <string name="drawer_close" >Close navigation drawer</string>
    <string name="subscribe_link_prompt">Enter the URL of a RSS or Atom feed, or enter the URL of a website to scrape it for any possible feeds.</string>
    <string name="subscribe">Subscribe</string>
    <string name="search">Search</string>
    <string name="tags">Tags</string>

    <string name="time_ago_seconds">Seconds ago</string>
    <string name="time_ago_minute">A minute ago</string>
    <string name="time_ago_minutes">%d minutes ago</string>
    <string name="time_ago_hour">An hour ago</string>
    <string name="time_ago_hours">%d hours ago</string>
    <string name="time_ago_day">A day ago</string>
    <string name="time_ago_days">%d days ago</string>
    <string name="time_ago_years">%d years ago</string>
    <string name="time_ago_year">A year ago</string>
    <string name="time_ago_months">%d months ago</string>
    <string name="time_ago_month">A month ago</string>
    <string name="share_with_label">Add to Pensive</string>
    <string name="unfiled">Unfiled</string>

    <string name="action_show_read">Show all</string>
    <string name="action_hide_read">Show only unread</string>
    <string name="action_mark_as_read">Mark all as read</string>
    <string name="all_feeds">All Feeds</string>
    <string name="empty_feeds_title">No feeds yet.</string>
    <string name="empty_feeds_message">In a browser use Share... and choose Add to Pensive to search for feeds on the current page.\nOr add a feed by name by tapping + at the top.</string>
    <string name="all_read">All articles read.</string>
    <string name="action_manage_feeds">Manage Feeds</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_feed">Edit Feed</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="deleting">Deleting...</string>
    <string name="please_wait">Please wait.</string>
    <string name="action_about">About Pensive</string>
    <string name="about_text">Pensive is a product of <a href="http://concentricsky.com">Concentric Sky, Inc</a>.</string>
    <string name="about_contact">Suggestions? <a href="mailto:hello@concentricsky.com">Send us an email</a>.</string>
    <string name="saving_feeds">Saving feeds...</string>
    <string name="add_to_thoth">Add to Pensive</string>
    <string name="add_new_feed">Add new feed</string>
    <string name="import_status_duplicate">Duplicate.</string>
    <string name="import_status_searching">Searching...</string>
    <string name="import_status_added">Added.</string>
    <string name="import_status_added_to">Added to:</string>
    <string name="import_status_error">Error parsing feed.</string>
    <string name="sync_account_type">pensive.concentricsky.com</string>
    <string name="sync_provider_authority">com.concentricsky.android.pensive.provider</string>
    <string name="subscribe_parse_error">Could not find any rss or atom feeds.</string>

</resources>
