<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"
              >

    <TextView
            android:text="@string/subscribe_link_prompt"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <EditText android:id="@+id/subscribe_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textUri"
            />

    <Button android:id="@+id/subscribe_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/search"
            />

    <ProgressBar android:id="@android:id/progress"
           android:layout_marginTop="50dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:visibility="invisible"
           />
    <TextView android:id="@+id/subscribe_error"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="error message"
              android:textStyle="italic"
              android:visibility="invisible"
            />

    <LinearLayout android:id="@+id/subscribe_feed_detail"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="?android:attr/listPreferredItemPaddingLeft"
        android:paddingBottom="?android:attr/listPreferredItemPaddingLeft"
        android:visibility="invisible"
        >

        <TextView android:id="@+id/feed_title"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
              android:paddingRight="?android:attr/listPreferredItemPaddingRight"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="title"
              />
        <TextView android:id="@+id/feed_link"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="?android:attr/textColorHint"
              android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
              android:paddingRight="?android:attr/listPreferredItemPaddingRight"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="link"
              />
        <TextView android:id="@+id/feed_description"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:textColor="?android:attr/textColorHint"
                  android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                  android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="description"
                />
        <TextView android:id="@+id/feed_timestamp"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:textColor="?android:attr/textColorHint"
                  android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                  android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="timestamp"
                />
        <com.concentricsky.android.thoth.AutoCompleteAppendTextView
                android:id="@+id/feed_tags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tags"
                />


        <Button android:id="@+id/subscribe_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/subscribe"
                />

    </LinearLayout>

</LinearLayout>