<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"
        >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:gravity="center"
            >
        <TextView android:id="@+id/original_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Feed Name"
                android:gravity="center"
                />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:gravity="center"
            >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                />

        <EditText android:id="@+id/title"
                  android:layout_width="0dp"
                  android:layout_weight="8"
                  android:layout_height="wrap_content"
                />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?android:listPreferredItemHeight"
            android:gravity="center"
            >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tags"
                />

        <com.concentricsky.android.thoth.AutoCompleteAppendTextView
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                />
    </LinearLayout>

    <RelativeLayout android:id="@+id/button_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@android:string/cancel"
                />
        <Button android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/save"
                />
    </RelativeLayout>
    <ProgressBar android:id="@android:id/progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:visibility="gone"
                 android:indeterminate="true"
            />

</LinearLayout>